# McrLive

./: .gitignore  compute.py  create_pp.py  dsbot.py  explore.ipynb  ft.ipynb  ft.py  pyproject.toml  qs.py  speech_rec.py  txt_processing.py  uncorrupt.py
